plugins/xpath/xpath-lang/testData/xpath2/highlighting/numberFollowedByToken2.xpath2
5 div <error descr="Number literal must be followed by whitespace in XPath 2">2gt</error> 1